Prevent images in content from overflowing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -78,10 +78,11 @@ padding: 15px;
 background-color: #fff;
 border: 1px solid #e6e6e6;
 margin-bottom: 25px;
+text-align: justify;
 }
 
-.rzl-content {
-text-align: justify;
+.rzl-content img {
+    max-width: 100%;
 }
 
 .rzl-blogpost {
